<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="android_url">http://www.practicum.yandex.ru/profile/android-developer/</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email">dariabandukova@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="agreement_url">http://www.yandex.ru/legal/practicum_offer/</string>
    <string name="refresh">Обновить</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_error">Ничего не нашлось</string>
    <string name="history">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <string name="length">Длительность</string>
    <string name="albumName">Альбом</string>
    <string name="trackYear">Год</string>
    <string name="trackGenre">Жанр</string>
    <string name="trackCountry">Страна</string>
    <string name="trackStarts">00:00</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="tab_favorites">Избранные треки</string>
    <string name="tab_playlists">Плейлисты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Название*</string>
    <string name="hint_description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="creator_alarm_body">Разрешить приложению «Playlist Maker» доступ к фото?</string>
    <string name="positive_button">Завершить</string>
    <string name="negative_button">Отмена</string>
    <string name="back_alert_message">Все несохраненные данные будут потеряны</string>
    <string name="back_alert_title">Завершить создание плейлиста?</string>
    <string name="add_track_message">Добавлено в плейлист </string>
    <string name="add_track_message_false">Трек уже добавлен в плейлист </string>
    <string name="add_playlist_message">Плейлист %s создан</string>
    <plurals name="tracksContOfList">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d трекoв</item>
    </plurals>
    <string name="zero_tracks">0 треков</string>
    <string name="rationale_permission_message">Необходимо разрешение для просмотра галереи</string>
    <string name="cover">Обложка альбома</string>
    <string name="title_playlist_dialog">Завершить создание плейлиста?</string>
    <string name="message_playlist_dialog">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist">Плейлист</string>
    <string name="my_playlists">my_playlists</string>
    <string name="created">создан</string>
    <string name="already_added">Трек уже добавлен в плейлист</string>
    <string name="added">Добавлено в плейлист</string>
    <string name="label_library">LibraryFragment</string>
    <string name="label_search">SearchFragment</string>
    <string name="label_settings">SettingsFragment</string>
    <string name="label_player">AudioPlayerFragment</string>
    <string name="label_newPlaylistFragment">PlaylistCreatorFragment</string>
    <string name="label_favorites">FavoritesFragment</string>
    <string name="label_playlist_creator">PlaylistCreatorFragment</string>
    <string name="label_playlists">PlaylistsFragment</string>
    <string name="label_bottom_sheet_player">BottomSheetPlayer</string>
    <string name="label_playlist">PlaylistFragment</string>
    <string name="share_playlist">Поделиться</string>
    <string name="information">Редактировать информацию</string>
    <string name="delete">Удалить плейлист</string>
    <string name="empty_track_list">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_message">Хотите удалить плейлист</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="edit_title">Редактировать</string>
    <string name="save_playlist">Сохранить</string>
    <string name="empty_playlist">Плейлист пуст</string>
    <string name="settings_not_found_app">Не найдено подходящих приложений</string>
    <string name="nothing_added">Вы ещё не добавили ни одного трека</string>
    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
    <string name="delete_track">Хотите удалить трек?</string>
</resources>