<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/player_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".media.ui.PlaylistMenuBottomSheet">
    <View
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@drawable/rounder" />
    <include
        android:id="@+id/item_bottom_sheet"
        layout="@layout/item_bottom_sheet"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/buttonSharing"
        style="@style/SettingsBtn"
        android:text="@string/share_playlist" />
    <Button
        android:id="@+id/buttonEdit"
        style="@style/SettingsBtn"
        android:text="@string/information" />
    <Button
        android:id="@+id/buttonDelete"
        style="@style/SettingsBtn"
        android:text="@string/delete" />
</LinearLayout>