<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_backbutton_toolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:contentInsetStartWithNavigation="0dp"
        app:elevation="0dp"
        app:title="@string/settings"
        app:titleTextColor="?attr/colorPrimaryVariant"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:theme="@style/Theme.MyApp"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="0dp">

        <com.google.android.material.button.MaterialButton
            style="@style/settingsButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center"
            android:paddingStart="@dimen/medium_padding"
            android:paddingTop="@dimen/big_padding"
            android:paddingEnd="@dimen/small_padding"
            android:paddingBottom="@dimen/big_padding"
            android:text="@string/theme"
            android:textSize="@dimen/text_size_16" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/button_switch"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:width="32dp"
            android:paddingStart="298dp"
            android:paddingTop="21dp"
            android:paddingEnd="6dp"
            android:paddingBottom="21dp"
            app:thumbTint="@color/selector_switch_thumb"
            app:trackTint="@color/selector_switch_track" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_button"
        style="@style/settingsButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:icon="@drawable/share"
        app:iconGravity="end" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_support"
        style="@style/settingsButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support"
        app:icon="@drawable/support"
        app:iconGravity="end" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_agreement"
        style="@style/settingsButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agreement"
        app:icon="@drawable/arrow2"
        app:iconGravity="end" />
</LinearLayout>