<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:contentInsetStartWithNavigation="0dp"
        app:title="@string/search"
        app:titleTextColor="?attr/colorPrimaryVariant"
        app:elevation="0dp"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/medium_padding"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/search"
            android:drawablePadding="8dp"
            android:drawableTint="?attr/colorOnSecondary"
            android:hint="@string/search"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="text"
            android:lines="1"
            android:textColor="@color/black"
            android:paddingStart="12dp"
            android:textColorHint="?attr/colorOnSecondary"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/clear1"
            android:visibility="gone" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/searchInfo"
                android:textColor="?attr/colorPrimaryVariant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:gravity="center"
                android:text="@string/history"
                android:textFontWeight="500" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchHistoryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clean_history"
                style="@style/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/clean_history"
                app:cornerRadius="54dp" />
        </LinearLayout>
    </ScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/search_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="102dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/nothing_founded" />

        <TextView
            style="@style/searchInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:text="@string/search_error"
            android:textFontWeight="400" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/network_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="102dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/network_error" />

        <TextView
            style="@style/searchInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            android:paddingRight="24dp"
            android:text="@string/network_error"
            android:textFontWeight="400" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/refreshButton"
            style="@style/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/refresh"
            android:textAllCaps="false"
            app:cornerRadius="54dp" />
    </LinearLayout>
</LinearLayout>