<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_margin="4dp"
            android:padding="@dimen/padding_title"
            android:paddingTop="@dimen/top_padding_title"
            android:backgroundTint="@color/white"
            android:gravity="start"
            android:text="@string/button3"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:icon="@drawable/arrow"
            app:iconTint="@color/black"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="start"
            android:layout_marginTop="24dp"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingTop="@dimen/big_padding"
            android:paddingBottom="@dimen/big_padding"
            android:paddingRight="@dimen/small_padding"
            android:text="@string/theme"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:icon="@drawable/control"
            app:iconGravity="end"
            app:iconTint="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingRight="@dimen/small_padding"
            android:paddingTop="@dimen/big_padding"
            android:paddingBottom="@dimen/big_padding"
            android:gravity="start"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:icon="@drawable/share"
            app:iconGravity="end"
            app:iconTint="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="start"
            android:text="@string/support"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingRight="@dimen/small_padding"
            android:paddingTop="@dimen/big_padding"
            android:paddingBottom="@dimen/big_padding"
            android:textSize="@dimen/text_size_small"
            app:icon="@drawable/support"
            app:iconGravity="end"
            app:iconTint="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="start"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingRight="@dimen/small_padding"
            android:paddingTop="@dimen/big_padding"
            android:paddingBottom="@dimen/big_padding"
            android:text="@string/agreement"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:icon="@drawable/arrow2"
            app:iconGravity="end"
            app:iconTint="@color/gray" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>